[project]
name = "argon-sim"
version = "1.0.0"
description = "Analysis toolkit for molecular dynamics simulations of liquid argon, implementing Rahman's 1964 foundational methods"
readme = "README.md"
authors = [
    {name = "Hunter Heidenreich", email = "hheiden0@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
keywords = ["molecular-dynamics", "argon", "simulation", "rahman", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/hunter-heidenreich/argon-simulation"
Repository = "https://github.com/hunter-heidenreich/argon-simulation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argon_sim"]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
